@@ -14,12 +14,19 @@ as constructor arugments. So first we need to create a dispatcher.
     >>> demo1 = dispatcher.JSONRPCDispatcher()
     >>> demo2 = dispatcher.JSONRPCDispatcher()
 
-Now we create the app.
+Now we create the app and a test client for each.
 
     >>> app = wsgi.WSGIJSONRPCApplication(
     ...     {'demo1':demo1,
     ...      'demo2':demo2}
     ...     )
+
+    >>> from webtest import TestApp
+    >>> app = TestApp(app)
+
+    >>> from lovely.jsonrpc.testing import TestJSONRPCProxy
+    >>> client1 = TestJSONRPCProxy('/demo1', app)
+    >>> client2 = TestJSONRPCProxy('/demo2', app)
 
 Let us register a simple method on demo1.
 
@@ -28,38 +35,17 @@ Let us register a simple method on demo1.
 
     >>> demo1.register_method(echo, 'echo')
 
-We start a simple server.
+Calling a method on proxy.
 
-    >>> from wsgiref.simple_server import make_server
-    >>> server = make_server('localhost', 12345, app)
-
-Let the server handle one request.
-
-    >>> import threading
-    >>> class OneRequest(threading.Thread):
-    ...     def run(self):
-    ...         server.handle_request()
-
-
-Let us set up a client.
-
-    >>> from lovely.jsonrpc import proxy
-
-    >>> client1 = proxy.ServerProxy('http://localhost:12345/demo1')
-    >>> client2 = proxy.ServerProxy('http://localhost:12345/demo2')
-
-    >>> OneRequest().start()
     >>> client1.echo(1)
     1
 
 If the method is not found a 500 is raised.
 
-    >>> OneRequest().start()
     >>> client2.echo(1)
     Traceback (most recent call last):
     ...
     RemoteException: {'message': 'no such method', 'type': 'JSONRPCError'}
-
 
 Let us register another method that fails.
 
@@ -67,8 +53,6 @@ Let us register another method that fails.
     ...     return 1/0
 
     >>> demo1.register_method(zero_division, 'zero_division')
-
-    >>> OneRequest().start()
 
 We get a RemoteException now.
 
@@ -81,11 +65,11 @@ We get a RemoteException now.
 
 If the entrypoint is not found a 404 is raised.
 
-    >>> client3 = proxy.ServerProxy('http://localhost:12345/notthere')
-    >>> OneRequest().start()
+    >>> client3 = TestJSONRPCProxy('/demo3', app)
     >>> client3.echo(1)
     Traceback (most recent call last):
     ...
-    HTTPException: 404
-    '404 Not found'
+    AppError: Bad response: 404 NotFound ...
+    404 Not found
+
 
